Add recipe service

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
+<!-- appDropdown is a custom directive we built to toggle the menu -->
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
