--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,9 @@
   <div class="row">
     <div class="col-xs-12">
       <app-recipe-item
-        *ngFor="let recipeEl of recipes"
-        [recipe]="recipeEl">
+        *ngFor="let recipeEl of recipes; let i = index"
+        [recipe]="recipeEl"
+        [index]="i"> <!-- Send the item number to recipe-item.component -->
       </app-recipe-item>
     </div>
   </div>
