--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,12 +3,9 @@
       <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-      <app-recipe-detail
-        *ngIf="selectedRecipe; else infoText"
-        [recipe]="selectedRecipe"></app-recipe-detail>
-      <ng-template #infoText>
-        <p>Please select a Recipe!</p>
-      </ng-template>
+      <router-outlet></router-outlet>
     </div>
   </div>
+
+  <!-- This router outlet is from the child route registered in app-routing module -->
   
